# learning_keda

./: README.md  docker-compose.yml
api-service-emulator/: Cargo.toml  Dockerfile.api-service  README.md
api-service-emulator/.cargo/: config.toml
api-service-emulator/src/: main.rs
deployment/: api_service_emulator_minikube.yaml  build_api_service_image_for_minikube.sh  create.sh  destroy.sh  k6.yaml  namespace.yaml  otel-lgtm.yaml
k6_tests/: test_api_server_fast_and_slow.js  test_api_service_health.js  test_grafana_health.js
