[package]
name = "api-service"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
opentelemetry = { version = "0.31.0", features = ["trace", "logs", "metrics"] }
opentelemetry-appender-log = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "logs", "grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
opentelemetry-stdout = "0.31.0"

[dev-dependencies]
